fixed footer spacing issue

--- a/core/css/style.css
+++ b/core/css/style.css
@@ -3428,7 +3428,7 @@ BDO[DIR=rtl] {
 }
 
 img.custom-logo {
-  margin: 10px 0;
+  margin: 20px 0;
 }
 
 .site-name a {
